# tokicat

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  opencode.json  pet.py  run.sh  sessions.py
.odin/: config.yaml
assets/: README.txt
assets/logos/: README.txt
crates/petcore/: Cargo.toml
crates/petcore/src/: config.rs  fmt.rs  lib.rs  pricing.rs  quota.rs  state.rs
crates/petcore/src/providers/: claude.rs  codex.rs  mod.rs  opencode.rs
crates/petcore/src/terminal/: generic.rs  mod.rs  wezterm.rs
crates/petgui/: Cargo.toml
crates/petgui/src/: app.rs  art.rs  logos.rs  main.rs  monitors.rs  panel.rs  pet.rs  theme.rs
reference docs/: ARCHITECTURE.md  DEEP_ANALYSIS.md  RUST_ARCHITECTURE.md
