[workspace]
resolver = "2"
members = ["crates/petcore", "crates/petgui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Harsh Mondal"]
repository = "https://github.com/HarshMondal/tokicat"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
glob = "0.3"
directories = "5"
anyhow = "1"
thiserror = "1"
ureq = { version = "2", features = ["json", "tls"] }
image = { version = "0.25", default-features = false, features = ["gif"] }

# Build the (large) GUI/image/tls dependency trees with optimizations even in
# debug, so dev runs of the pet stay smooth.
[profile.dev.package."*"]
opt-level = 2
