[package]
name = "petgui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "egui/eframe desktop pet GUI for petcore."

[[bin]]
name = "cc-pet"
path = "src/main.rs"

[dependencies]
petcore = { path = "../petcore" }
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "x11"] }
egui = "0.34"
image = { version = "0.25", default-features = false, features = ["gif", "png", "jpeg", "webp"] }
